tsplayer: VDA_GET_VIDEO_INFO values sometimes not right. [1/1]
PD#TV-31478

Problem:
VDA_GET_VIDEO_INFO values sometimes not right.

Solution:
Fix the issue VDA_GET_VIDEO_INFO values sometimes not right.

Verify:
AM32A1-T921D
SourceCode:
  commit 2b0809f4a011811faa9db45fadc2f5437793dc7c
  Author: zhipeng.he <zhipeng.he@amlogic.com>
  Date:   Tue Feb 23 10:59:24 2021 +0800

  tsplayer: VDA_GET_VIDEO_INFO values sometimes not right. [1/1]

  Change-Id: Id6e7784ef29e70d10fd7ab8c1c47e00dfdcfee4e
  Signed-off-by: zhipeng.he <zhipeng.he@amlogic.com>

Signed-off-by: zhipeng.he <zhipeng.he@amlogic.com>
Change-Id: Iae6613500cd04969e033c612287254f00f4321bc

--- a/example/AmTsPlayerExample/Makefile
+++ b/example/AmTsPlayerExample/Makefile
@@ -1,8 +1,8 @@
 OBJ=AmTsPlayerExample.o
 
-LDFLAGS =-lpthread -levent -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lm -lz -g $(EXTRA_LDFLAGS)
+LDFLAGS=-lpthread -levent -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lm -lz -g
 
-CFLAGS =-I$(STAGING_DIR)/usr/include/ $(EXTRA_CFLAGS)
+CFLAGS=-I$(STAGING_DIR)/usr/include/
 
 %.o: %.cpp $(DEPS)
 	$(CXX) -c -o $@ $< $(CFLAGS)
