tsplayer: yocto linux tsplayer compile failed. [1/1]
PD#RSP-1909

Problem:
yocto linux tsplayer compile failed.

Solution:
fix the issue that yocto linux tsplayer compile failed.

Verify:
S905Y4
SourceCode:
  commit 4eff6a671b79f1e3f61587438731cfbb33957994 (HEAD -> Linux)
  Author: zhipeng.he <zhipeng.he@amlogic.com>
  Date:   Mon May 24 17:23:00 2021 +0800

  yocto linux tsplayer compile failed.

  Change-Id: Ib4e7f690b222285fc16c5549d33ba9bfd2bf8321
  Signed-off-by: zhipeng.he <zhipeng.he@amlogic.com>

Signed-off-by: zhipeng.he <zhipeng.he@amlogic.com>
Change-Id: I57d2cb9cf792ff7ff269056895f5f85bb7e8b6a1

--- a/example/AmTsPlayerExample/Makefile
+++ b/example/AmTsPlayerExample/Makefile
@@ -1,6 +1,6 @@
 OBJ=AmTsPlayerExample.o
 
-LDFLAGS =-lpthread -levent -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lm -lz -g $(EXTRA_LDFLAGS)
+LDFLAGS =-lpthread -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lm -lz -g $(EXTRA_LDFLAGS)
 
 CFLAGS =-I$(STAGING_DIR)/usr/include/ $(EXTRA_CFLAGS)
 
