--- a/example/AmTsPlayerExample/Makefile
+++ b/example/AmTsPlayerExample/Makefile
@@ -1,6 +1,6 @@
 OBJ=AmTsPlayerExample.o
 
-LDFLAGS =-lpthread -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lm -lz -g $(EXTRA_LDFLAGS)
+LDFLAGS =-lpthread -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lmediahal_mediasync -lwayland-client -lm -lz -g $(EXTRA_LDFLAGS)
 
 CFLAGS =-I$(STAGING_DIR)/usr/include/ $(EXTRA_CFLAGS)
 
