tsplayer: CB2 roku not need link libwayland. [1/1]
PD#SWPL-63443

Problem:
roku link libwayland,but roku not have libwayland.

Solution:
roku not need link libwayland.

Verify:
roku
SourceCode:
commit 01863585819aabf8d02438b3040d29f808ae4f84
Author: zhipeng.he <zhipeng.he@amlogic.com>
Date:   Mon Nov 1 21:45:03 2021 +0800

Signed-off-by: zhipeng.he <zhipeng.he@amlogic.com>
Change-Id: I6fd8c075df439fe89ad5cc7dcf2710963c22bc69

--- a/example/AmTsPlayerExample/Makefile
+++ b/example/AmTsPlayerExample/Makefile
@@ -1,6 +1,13 @@
 OBJ=AmTsPlayerExample.o
 
-LDFLAGS =-lpthread -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lmediahal_mediasync -lwayland-client -lm -lz -g $(EXTRA_LDFLAGS)
+ifeq ($(CC_TARGET_FLOAT_ABI_)_$(CC_PACKAGE_WAYLAND_), softfp_)
+LD_SUPPORT_WAYLAND =
+else
+LD_SUPPORT_WAYLAND = -lwayland-client
+endif
+LDFLAGS =-lpthread -laudio_client -lmediahal_videodec -lmediahal_tsplayer -lmediahal_resman -lmediahal_mediasync -lm -lz -g $(EXTRA_LDFLAGS)
+
+LDFLAGS += $(LD_SUPPORT_WAYLAND)
 
 CFLAGS =-I$(STAGING_DIR)/usr/include/ $(EXTRA_CFLAGS)
 
